# llm-eval-env

./: Dockerfile  Pipfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py  graders.py  scenario_generator.py  tasks.py
tests/: test_graders.py
